<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: </string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="placeholder">hello world, we will add the actual text to be shown</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="create_text">Create Account</string>
    <string name="or_text">Or</string>
    <string name="username_hint">Username</string>
    <string name="or_text_">OR</string>
    <string name="get_started_text">Get Started</string>
    <string name="sub_title_opening_temp">Trivia</string>
    <string name="title_text_opening_temp">Trivia</string>
    <string name="valid_password">Enter at least 6 characters</string>
    <string name="wait_login">Please wait while login...</string>
    <string name="wrong_details">\tWrong details\nPlease try again</string>
    <string name="empty_fields">Empty fields are not allowed</string>
    <string name="valid_email">Enter Valid E-mail address</string>
    <string name="server_error">Server Error\nTry again</string>
    <string name="correct_password">Wrong Password</string>
    <string name="correct_email_address">Wrong Email</string>
</resources>